# cabal-auto-expose

./: .gitignore  README.org  cabal.project
auto-expose-example-project/: Setup.hs  auto-expose-example-project.cabal  auto-expose-test-project.cabal  cabal.project
auto-expose-example-project/src/: LibSig.hsig
auto-expose-example-project/src/Lib/Internal/: Internal.hs
auto-expose-example-project/src/exampleBenchmark/: Main.hs  Module.hs
auto-expose-example-project/src/exampleExe/: Main.hs  Module.hs
auto-expose-example-project/src/exampleTestSuite/: Main.hs  Module.hs
cabal-auto-expose/: Benchmark.hs  LICENSE  README.org  Test.hs  cabal-auto-expose.cabal
cabal-auto-expose-cli/: Main.hs  README.org  cabal-auto-expose-cli.cabal
cabal-auto-expose/src/Distribution/Simple/: AutoExpose.hs
cabal-auto-expose/testProjects/golden/: overlapping-build-expected.cabal  simple-build-expected.cabal
cabal-auto-expose/testProjects/overlapping-build/: overlapping-build.cabal
cabal-auto-expose/testProjects/simple-build/: simple-build.cabal
