name: auto-expose-example-project
version: 0.1.0.0
homepage: https://github.com/deech/cabal-auto-expose#readme
bug-reports: https://github.com/deech/cabal-auto-expose/issues
author: Aditya Siram
copyright: 2020 Aditya Siram
license: MIT
build-type: Custom
cabal-version: >=2.0

custom-setup
  setup-depends:
    base >= 4.14 && < 5,
    Cabal >= 3.2.0.0 && < 4,
    cabal-auto-expose -any

source-repository head
  type: git
  location: https://github.com/deech/cabal-auto-expose

library
  default-language: Haskell2010
  build-depends: base >= 4.14 && < 4.15
  hs-source-dirs: src

executable example-exe
  default-language: Haskell2010
  build-depends: base >= 4.14 && < 4.15
  hs-source-dirs: src/exampleExe
  main-is: Main.hs

benchmark example-benchmark
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  build-depends: base >= 4.14 && < 4.15
  hs-source-dirs: src/exampleBenchmark
  main-is: Main.hs

test-suite example-test-suite
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  build-depends: base >= 4.14 && < 4.15
  hs-source-dirs: src/exampleTestSuite
  main-is: Main.hs