cabal-version: >=1.10
name:          simple-build
version:       0.1.0.0
license-file:  LICENSE
build-type:    Simple

library
    exposed-modules:
        Simple.Build.Lib
        Simple.Build.Utils

    signatures:      Simple.Build.Lib
    hs-source-dirs:  src/lib

library internal
    exposed-modules: Simple.Build.Lib.Internal.Internal
    hs-source-dirs:  src/internalLib

executable exe
    main-is:        Main.hs
    hs-source-dirs: src/exe
